2009-01-01  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-loader.lisp (*contribs*): Add `swank-sbcl-exts'.

2009-01-01  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-eval-async, slime-dispatch-event): Canoncalize
	return value. Previously they returned an arbitrary value which
	was displayed to the minibuffer due to a bug in slime-autodoc. The
	arbitrariness of the return value made debugging this a chore.

2009-01-01  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (frame-source-location-for-emacs)
	(pc-source-location): Fall back to the source-note of the function
	if there is no source-note for a pc offset.

2009-01-01  Helmut Eller  <heller@common-lisp.net>

	For buffers without filename, map the name of the tempfile back to
	the buffer name.

	* swank-openmcl.lisp (*temp-file-map*): New variable.
	(note-temp-file): New function.
	(compile-temp-file, source-note-to-source-location): Use it.

2009-01-01  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (sleep-for): New function
	* slime.el ([test] break): Use SWANK::SLEEP-FOR to help CCL pass
	this test.
	([test] arglist): Update arglist of
	swank::compile-string-for-emacs.
	([rest] find-definition.2): Allow some whitespace before the actual
	position.  Otherwise, CCL would fail on this test.

2008-12-31  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (maybe-redirect-global-io): Don't consider
	connections without streams.
	(*new-connection-hook*): Don't add MAYBE-REDIRECT-GLOBAL-IO.
	(create-repl): Call MAYBE-REDIRECT-GLOBAL-IO here.

2008-12-31  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp ([method] source-locations (symbol)): Drop
	the unused _; the compiler dosn't like it.

2008-12-31  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp ([method] source-locations (symbol)): 

	* slime.el (slime-cd, slime-pwd): New commands.
	(slime-change-directory): New function.
	(slime-change-directory-hooks): New hook.
